# slack-mcp-server

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  server.json  server.py
